http: refactor slope
